--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <div id="page">
     <header>
       <h1>SUNRISE.SUNSET</h1>
-      <h2>STOCKHOLM</h2>
-      <h3>2012-11-02</h3>
+      <h2></h2>
+      <h3 class="date"></h3>
     </header>
     <div class="display">
 
     </div>
   </div>
+  <script src="http://ip-geo.appspot.com/geo_data.js"></script>
   <script src="https://raw.github.com/mbostock/d3/xhr2/d3.v2.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="scripts/sunrisesunset.js"></script>
